# passive-policy-intelligence

./: .env.example  .gitignore  ACTIVE_CODEBASE.md  CONTRIBUTING.md  NEXT_STEPS.md  README.md  SESSION_NOTES.md  archive.html  demo.html  index.html  manage.py  pyproject.toml  requirements.txt  run_pipeline.ps1  run_pipeline.sh  sources.html  sources_for_recategorization.csv  test_orchestrator.py  update_db_firewall.py
.claude/: settings.local.json
.github/: ACTIVE_CODEBASE.md
.github/workflows/: archive-rss.yml  deploy-portal.yml
_file/: theme.78c22643.css
_file/data/: archive.a3205cc0.parquet  morning_paper.2f997b4a.parquet
_npm/apache-arrow@21.1.0/: 63de76cd.js
_npm/parquet-wasm@0.7.1/: 68d81b68.js
_observablehq/: client.857ef40c.js  stdlib.43270668.js
_observablehq/stdlib/: duckdb.20461150.js  inputs.7f302853.js
archive/: rss_archive.csv
docs/: 100_Project-Overview.md  200_Architecture.md  300_Think-Tank-Portal.md  500_Database-Schema.md  DEPLOYMENT.md  OPERATIONS.md
portal/: observablehq.config.js  package-lock.json  package.json
portal/src/: archive.md  demo.md  index.md  sources.md  technical.md  theme.css
scripts/: DATA_CLEANUP_README.md  DEMO_SETUP_README.md  add_anchor_descriptions.py  archive_rss_links.py  batch_create_anchors.py  check_demo_anchors.py  check_linkages.py  cleanup_duplicate_links.py  cleanup_test_anchors.py  demo_cleanup.py  explore_highlights.py  export_to_parquet.py  reanalyze_for_demo.py  requirements_deploy.txt  reset_sent_dates.py  setup_demo_anchors.py  test_digest_render.py  verify_observability_data.py
scripts/setup/: migrate_kb_tags_to_db.py  setup_database.py
src/analysis/: analyze_articles.py  dspy_utils.py  enrich_articles.py
src/delivery/: config.py  engine.py  renderer.py
src/ingestion/: add_charters_to_kb.py  archive_ingestor.py  build_knowledge_base.py  index_articles.py  index_knowledge_base.py  rss_fetcher.py
user_content/: ConsolidatedRSSFeeds.csv  demo_hyde_documents.json  new_anchors.json
(+18 files in other folders)
